# peli

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  codecov.yml  peli.kdev4
cmake/: ApplyStrictCompileOptions.cmake  peli-config.cmake.in
dep/: CMakeLists.txt
doc/: Doxyfile
example/: CMakeLists.txt  canada.cpp  input.json  main.cpp
include/: floaxie
include/peli/: array.h  bad_value_cast.h  except.h  object.h  value.h  value_basics.h
include/peli/detail/: type_traits.h  value_shell.h  variant_value.h  variant_value_template.h  variant_value_template_factory.h
include/peli/detail/printer/: tray.h
include/peli/detail/template_snippets/: bind_specialization.h  check_in_pack.h  contains.h  copy_cv_reference.h  templated_visitor.h  type_list.h
include/peli/detail/variant/: variant.h
include/peli/detail/variant_value/: component.h  inline.h  json.h  value.h  value_factory.h  value_holder.h  value_holder_template.h  value_template.h
include/peli/json/: array.h  find.h  iomanip.h  number.h  object.h  printer.h  value.h  value.tcc
include/peli/json/detail/: json_pointer.h  special_chars.h
include/peli/json/detail/parser/: array.h  boolean.h  null.h  number.h  object.h  parser.h  stream_buffer.h  stream_routines.h  string.h  string_buffer.h  tokenizer.h  tokenizer.tcc  utf.h
include/peli/json/detail/printer/: array.h  boolean.h  head.h  null.h  number.h  object.h  stream_routines.h  string.h  util.h  visitor.h
src/: CMakeLists.txt  bad_value_cast.cpp  iomanip.cpp
src/detail/: CMakeLists.txt  special_chars.h  type_traits.cpp  variant_value.cpp
src/detail/parser/: CMakeLists.txt  array.h  boolean.h  null.h  number.h  object.cpp  object.h  parser.h  skipws.cpp  special_chars.h  stream_routines.cpp  stream_routines.h  string.h  tokenizer.h  utf.cpp  utf.h
src/detail/printer/: CMakeLists.txt  array.h  boolean.h  head.h  null.h  number.h  object.h  printer.h  stream_routines.h  string.h  util.cpp  util.h
src/detail/variant_value/: CMakeLists.txt  value.cpp  value_factory.cpp
src/json/: CMakeLists.txt  parser.cpp  parser.h  printer.cpp  value.cpp
src/json/detail/: CMakeLists.txt
src/json/detail/parser/: CMakeLists.txt  array.h  boolean.h  null.h  number.h  object.h  parser.h  stream_routines.cpp  stream_routines.h  string.h  tokenizer.h  tokenizer.tcc  utf.cpp  utf.h
src/json/detail/printer/: CMakeLists.txt  array.h  boolean.h  head.h  null.h  number.h  object.h  printer.h  stream_routines.h  string.h  typewriter.h  typewriter.tcc  utf.h  util.cpp  util.h  visitor.h
test/: CMakeLists.txt  exception_check.h  json_find.cpp  json_parse.cpp  json_parser_array.cpp  json_parser_boolean.cpp  json_parser_null.cpp  json_parser_number.cpp  json_parser_object.cpp  json_parser_string.cpp  json_printer_array.cpp  json_printer_boolean.cpp  json_printer_null.cpp  json_printer_number.cpp  json_printer_object.cpp  json_printer_string.cpp  make_value_array.cpp  make_value_boolean.cpp  make_value_number.cpp  make_value_object.cpp  make_value_string.cpp  value_api_test.cpp  value_char_input.cpp  value_factory_cast_const_to_ref.cpp  value_factory_cast_const_to_value.cpp  value_factory_cast_to_ref.cpp  value_factory_cast_to_value.cpp  value_istream.cpp  value_ostream.cpp  value_ostream_manip.cpp  value_shell_api_test.cpp  value_shell_cast_const_to_cref.cpp  value_shell_cast_const_to_ref.cpp  value_shell_cast_const_to_value.cpp  value_shell_cast_to_cref.cpp  value_shell_cast_to_ref.cpp  value_shell_cast_to_value.cpp  value_shell_copy_assign.cpp  value_shell_copy_ctor.cpp  value_shell_default_ctor.cpp  (+30 more)
